swagger for add an user
